# mycc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENT_PLAN.md  KISS_REFACTOR_PLAN.md  README.md  install.sh  pixi.toml  pyproject.toml  test_tweakcc.py  uninstall.sh
.claude/: CLAUDE.md  settings.json
.claude/commands/: make-pr.md
.claude/plugins/claude-hud/: config.json
.claude/rules/: python.md  shell.md
.claude/skills/: skill-rules.json
.claude/skills/developing-skill/: skill-rules.json
.claude/skills/diagnose-bug/: SKILL.md
.claude/skills/log-first-failure/: SKILL.md
.claude/skills/monitor-job/: SKILL.md
.claude/skills/observe-act-loop/: SKILL.md
.claude/skills/query-logs/: SKILL.md
.claude/skills/sediment/: SKILL.md
.claude/skills/swanlab/: SKILL.md
.claude/skills/upstream-bug-report/: SKILL.md
.claude/skills/using-codex/: SKILL.md
.claude/skills/using-pixi/: REFERENCE.md
.claude/skills/weekly-report/: SKILL.md
.config/ccstatusline/: settings.json
commands/: commit.md
config/ccstatusline/: settings.json
config/defaults/: module_config.yaml
config/mcp/: README.md
dotfiles/claude-setting/: install.sh
dotfiles/claude-setting/.claude/: CLAUDE.md
dotfiles/claude-setting/.config/ccstatusline/: settings.json
mycc/: __init__.py  __main__.py  cli.py  config.py  error_reporter.py  external_commands.py  interfaces.py  manager.py  module_spec.py  path_manager.py  test_environment.py
mycc/core/: __init__.py  logger.py  manager.py  resources.py
mycc/data/: __init__.py
mycc/data/commands/: __init__.py  commit.md  make-pr.md
mycc/data/config/: __init__.py  registry.toml
mycc/data/config/claude/: settings.json
mycc/data/config/mcp/: README.md  __init__.py  servers.json
mycc/data/config/tweakcc/: config.json
mycc/modules/: __init__.py  base.py  base_sub_module.py  claude_user_setting.py  commands.py  commands_module.py  config_registry.py  configs.py  configs_module.py  deps.py  mcp.py  mcp_module.py
mycc/utils/: __init__.py  dependencies.py
recipe/: recipe-full.yaml  recipe.yaml
scripts/: install.sh  upload.py  upload.sh
tests/: conftest.py  test_config_registry_performance.py  test_core_functionality.py  test_integration.py  test_modules.py  test_resource_access.py  test_simplified_modules.py
