[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mycc"
dynamic = ["version"]
description = "A modular Claude Code configuration manager"
authors = [{ name = "junjzhang", email = "junjzhang@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tyro>=0.8.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.4",
]

[project.scripts]
mycc = "mycc.cli:main"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/junjzhang/mycc"
Repository = "https://github.com/junjzhang/mycc.git"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mycc"]
include = [
  "mycc/data/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "/mycc",
  "/README.md",
  "/LICENSE",
]

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py310"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
  # docstring
  "D"
]
ignore = [
  # mutable defaults
  "B006",
  # On top of the Google convention, disable `D417`
  "D417",
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  "T201"
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ARG001"]
